// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis direction end 1`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量
  ...
</div>
`;

exports[`Ellipsis direction middle 1`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  蚂蚁的企业级产品是一个庞
  ...
  ...
  些稳定且高复用性的内容。
</div>
`;

exports[`Ellipsis direction start 1`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  ...
  面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
</div>
`;

exports[`Ellipsis expand and collapse 1`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
  <a>
    collapse
  </a>
</div>
`;

exports[`Ellipsis expand and collapse 2`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  蚂蚁的企业级产品是一个庞大且复杂的体系。这
  ...
  <a>
    expand
  </a>
</div>
`;

exports[`Ellipsis multi line 1`] = `
<div
  class="adm-ellipsis"
  data-testid="ellipsis"
>
  蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，
  ...
</div>
`;
